Update: Homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://majiup.com",
+  "homepage": "https://www.majiup.com",
   "name": "majiup",
   "private": true,
   "version": "0.0.0",
