--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@supabase/supabase-js": "^2.43.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.1",
+    "react-multistep": "^5.5.9",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
